# opengl-test

./: CMakeLists.txt  README.md
docs/: 1.0.hello-triangle.md  1.1.element-buffer.md
include/glad/: glad.h
notes/: 00-introduction.md  01-basic-opengl-notes.md  02-opengl-and-libraries.md  03-glfw-and-glad-setup.md  04-graphics-pipeline.md  05-cpu-gpu-communication.md  README.md  chapter-06-ebo-and-indices.md
shaders/triangles/: triangle.frag  triangle.vert
src/: 1-intial.cpp  2-bg.cpp  3.traiangle.cpp  4.notes.cpp  5.traingle.cpp  6.triangle.cpp  7.triangle.cpp  8.rectangle-traingle.cpp  9.rectangle-ebo.cpp  config.h  constants.h  ex.cpp  glad.c  main.cpp  utils.cpp  utils.h
